Corrected typographical error on login page

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ center>a{
   <body>
     <div class="container">
       <form class="form" action="#">
-        <h1>Partner Login</h1>
+        <h1>Admin Login</h1>
         <br />
         <label for="email">Email Address</label>
         <input
